class Imanager {
  Future readUser({required String userId}) async {}
}
