import 'package:echno_attendance/domain/usecases/manager_mixin.dart';

class SeClass with ManagerMixin {}
